<resources>
    <string name="app_name">MyNotes</string>
    <string name="change_date">change date</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="about_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mode_one">mode one</string>
    <string name="mode_two">mode two</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="image">image</string>
    <string name="nav_header_title">nav_header_title</string>
    <string name="nav_header_subtitle">nav_header_subtitle</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_note">Приложение для ведения заметок. Никакие права не защищены :)</string>
    <string name="importanceRGName">Importance</string>
    <string name="apply">APPLY</string>
    <string name="main">main</string>
    <string name="edit">EDIT</string>
    <string name="editItem">Изменить</string>
    <string name="addItem">Добавить</string>
    <string name="deleteItem">Удалить</string>
    <string name="edit_date">EDIT DATE</string>
    <string name="floating_button">floatingButton</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">mynotes-433908</string>
    <string name="delete_warning_message">Are you sure?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="click_to_edit">Click to params for edit</string>
    <string name="forget_about_it">Forget about it</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="life_and_death">life and death</string>
</resources>